fio-bco (1.0.2) unstable; urgency=low

  * Merge pull request #26 from jancajthaml-openbank/bugfix/better-error-logging
  * better error logging
  * Merge pull request #24 from jancajthaml-openbank/bufix/tokens
  * ensure token folder and log more if fio gateway returns error

 -- Jan Cajthaml <jan.cajthaml@gmail.com>  Sat, 12 Jan 2019 17:20:30 +0100

fio-bco (1.0.1) unstable; urgency=low

  * Merge pull request #22 from jancajthaml-openbank/bugfix/fio-integration
  * Merge branch 'master' into bugfix/fio-integration
  * bugfix trailing slash mandatory for setting of pivot by id or date
  * Update release
  * Merge pull request #20 from jancajthaml-openbank/feature/more-stable-release-script
  * more stable release script added

 -- Jan Cajthaml <jan.cajthaml@gmail.com>  Sun, 30 Dec 2018 22:09:25 +0100
